@@ -1,3 +1,4 @@
+Version 55 	 2010-08-16 	 Customizing Admin Dashboard 
 Version 54 	 2010-08-16 	 To Activate/Deactivate accounts in Google 
 Version 53 	 2010-08-16 	 Confirmation while deleting Google account 
 Version 52 	 2010-08-16 	 Small changes to admin 
